[package]
name = "zydis-sys"
version = "0.1.1"
edition = "2021"
authors = ["Roee Shoshani"]
description = "low level rust bindings for the zydis library"
repository = "https://github.com/roeeshoshani/zydis-sys"
license = "MIT"
keywords = ["zydis", "x86", "disassemble", "assemble", "intel"]
categories = ["embedded", "encoding", "no-std", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
